Add package-lock and package.json from staging

--- a/src/js/grapl-cdk/package.json
+++ b/src/js/grapl-cdk/package.json
@@ -1,7 +1,9 @@
 {
   "name": "grapl-cdk",
   "version": "0.1.0",
-  "bin": "bin/grapl-cdk.js",
+  "bin": {
+    "grapl-cdk": "bin/grapl-cdk.js"
+  },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
@@ -48,7 +50,7 @@
     "@types/node-dir": "0.0.33",
     "aws-sdk": "2.784.x",
     "cdk": "^1.77.0",
-    "cdk-watchful": "^0.5.88",
+    "cdk-watchful": "^0.5.86",
     "node-dir": "0.1.17",
     "node-env-file": "0.1.8",
     "source-map-support": "0.5.19"
