--- a/pants.toml
+++ b/pants.toml
@@ -16,6 +16,10 @@ build_file_prelude_globs = [
   "pants-plugins/macros.py",
 ]
 
+pants_ignore = [
+  "src/js/grapl-cdk/cdk.out",
+]
+
 # Given how our code is currently structured, with package and test
 # code for every project in their own directory, I believe we have to
 # list each of those top-level containing directories here in order
