Add integration test for upsert logic

--- a/src/rust/graph-descriptions/Cargo.toml
+++ b/src/rust/graph-descriptions/Cargo.toml
@@ -26,6 +26,7 @@ thiserror = "1"
 tracing = "0.1.22"
 tokio = { version = "0.2.*", features = ["macros"] }
 tracing-subscriber = "*"
+hex = "0.4.2"
 
 [dependencies.uuid]
 version = "0.8"
