--- a/src/js/engagement_view/package.json
+++ b/src/js/engagement_view/package.json
@@ -32,7 +32,7 @@
     "react-dom": "^16.13.1",
     "react-force-graph": "^1.32.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4",
+    "react-scripts": "^4.0.3",
     "react-test-render": "^1.1.2",
     "semantic-ui-react": "^0.88.2",
     "three": "^0.125.2",
