--- a/src/rust/graph-merger/Cargo.toml
+++ b/src/rust/graph-merger/Cargo.toml
@@ -4,6 +4,12 @@ version = "1.0.0"
 authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
 
+[[bin]]
+name = "graph-merger"
+
+[lib]
+name = "graph_merger_lib"
+
 [dependencies]
 grapl-graph-descriptions = { path="../graph-descriptions"}
 grapl-config = {path="../grapl-config", version="*"}
@@ -53,3 +59,11 @@ tracing-futures = "0.2.4"
 tap = "1.0.0"
 lru = "0.6.5"
 futures-retry = "0.6.0"
+
+
+[dev-dependencies]
+tracing-subscriber = "0.2"
+
+
+[features]
+integration = []
