--- a/local-grapl.env
+++ b/local-grapl.env
@@ -11,7 +11,7 @@ DGRAPH_ALPHA_HTTP_EXTERNAL_PUBLIC_PORT=8080
 DGRAPH_RATEL_HTTP_EXTERNAL_PUBLIC_PORT=8000
 DGRAPH_ZERO_GRPC_PRIVATE_PORT=5080
 
-# DynamoDB Local default port
+# DynamoDB Local port
 DYNAMODB_PORT=8000
 
 # Grapl Ports!
@@ -25,12 +25,15 @@ GRAPL_UX_ROUTER_PORT=8901
 # Redis default port
 REDIS_PORT=6379
 
-# MinIO default port
+# MinIO default port.
+#
+# While localstack does have an S3 implementation, we've noted some
+# test failures using it. Until we fully understand the nature of that
+# failure, we will continue using MinIO as our S3 substitute.
 S3_PORT=9000
 
 # Localstack Secretsmanager
 SECRETSMANAGER_PORT=4584
-SECRETSMANAGER_WEB_UI_PORT=8099
 
 # Localstack SQS
 SQS_PORT=9324
