--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ x-common-variables:
   secretsmanager-env: &secretsmanager-env
     SECRETSMANAGER_ACCESS_KEY_ID: ${SECRETSMANAGER_ACCESS_KEY_ID}
     SECRETSMANAGER_ACCESS_KEY_SECRET: ${SECRETSMANAGER_ACCESS_KEY_SECRET}
-    SECRETSMANAGER_ENDPOINT: "http://${SECRETSMANAGER_HOST}:${SECRETSMANAGER_PORT}"
+    SECRETSMANAGER_ENDPOINT: ${SECRETSMANAGER_ENDPOINT}
   s3-env: &s3-env
     S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID}
     S3_ACCESS_KEY_SECRET: ${S3_ACCESS_KEY_SECRET}
@@ -95,7 +95,7 @@ services:
       - MINIO_REGION_NAME=${AWS_REGION}
       - MINIO_SECRET_KEY=${S3_ACCESS_KEY_SECRET}
     ports:
-      - 127.0.0.1:${S3_PORT}:${S3_PORT}
+      - 127.0.0.1:${S3_PORT_EXTERNAL}:${S3_PORT_INTERNAL}
     networks:
       default:
         aliases:
@@ -104,10 +104,21 @@ services:
   localstack:
     image: localstack/localstack:0.11.5
     ports:
-      - 127.0.0.1:${SQS_PORT}:${SQS_PORT}
+      # We'll expose localstack's edge port for ease of use with
+      # things like the AWS CLI, Pulumi, etc. We'll also re-expose it
+      # for various other services that we might want to otherwise
+      # target explicitly from our workstations.
+      #
+      # You can just stick with the main localstack port, though, and
+      # should get proxied through to where you're trying to go.
+      - 127.0.0.1:${LOCALSTACK_PORT}:${LOCALSTACK_PORT}
+      # As such, these other port exposures can be considered "legacy"
+      # at this point.
+      - 127.0.0.1:${SQS_PORT_EXTERNAL}:${LOCALSTACK_PORT}
     environment:
       - IMAGE_NAME=localstack/localstack:0.11.5
-      - SERVICES=dynamodb:${DYNAMODB_PORT},sqs:${SQS_PORT},secretsmanager:${SECRETSMANAGER_PORT}
+      - EDGE_PORT=${LOCALSTACK_PORT}
+      - SERVICES=dynamodb,sqs,secretsmanager
       - DEBUG=${DEBUG- }
       - DATA_DIR=${DATA_DIR- }
     volumes:
@@ -494,8 +505,8 @@ services:
     command: |
       /bin/bash -c "
         export TIMEOUT=35 &&
-        wait-for-it ${SQS_HOST}:${SQS_PORT} --timeout=$$TIMEOUT &&
-        wait-for-it ${S3_HOST}:${S3_PORT} --timeout=$$TIMEOUT &&
+        wait-for-it ${SQS_HOST}:${SQS_PORT_INTERNAL} --timeout=$$TIMEOUT &&
+        wait-for-it ${S3_HOST}:${S3_PORT_INTERNAL} --timeout=$$TIMEOUT &&
         wait-for-it ${DYNAMODB_HOST}:${DYNAMODB_PORT} --timeout=$$TIMEOUT &&
         wait-for-it ${DGRAPH_HOST}:${DGRAPH_ALPHA_HTTP_EXTERNAL_PUBLIC_PORT} --timeout=$$TIMEOUT &&
         wait-for-it ${SECRETSMANAGER_HOST}:${SECRETSMANAGER_PORT} --timeout=$$TIMEOUT &&
