--- a/local-grapl.env
+++ b/local-grapl.env
@@ -11,8 +11,12 @@ DGRAPH_ALPHA_HTTP_EXTERNAL_PUBLIC_PORT=8080
 DGRAPH_RATEL_HTTP_EXTERNAL_PUBLIC_PORT=8000
 DGRAPH_ZERO_GRPC_PRIVATE_PORT=5080
 
+# Localstack's edge port; all Localstack services are proxied through
+# this port.
+LOCALSTACK_PORT=4566 # default value
+
 # DynamoDB Local port
-DYNAMODB_PORT=8000
+DYNAMODB_PORT=${LOCALSTACK_PORT}
 
 # Grapl Ports!
 GRAPL_AUTH_PORT=8900
@@ -30,13 +34,19 @@ REDIS_PORT=6379
 # While localstack does have an S3 implementation, we've noted some
 # test failures using it. Until we fully understand the nature of that
 # failure, we will continue using MinIO as our S3 substitute.
-S3_PORT=9000
+S3_PORT_INTERNAL=9000 # default value
+S3_PORT_EXTERNAL=${S3_PORT_INTERNAL}
 
 # Localstack Secretsmanager
-SECRETSMANAGER_PORT=4584
+SECRETSMANAGER_PORT=${LOCALSTACK_PORT}
 
 # Localstack SQS
-SQS_PORT=9324
+#
+# We've been exposing the SQS service specifically. Though you can
+# access it through Localstack's edge port, we'll continue exposing it
+# for now via a dedicated port as "legacy" support.
+SQS_PORT_INTERNAL=${LOCALSTACK_PORT}
+SQS_PORT_EXTERNAL=9324
 
 # TODO: This may be a different port for different services
 VSC_DEBUGGER=8401
@@ -79,12 +89,14 @@ GRAPL_UX_ROUTER_HOST=ux-router.grapl.test
 
 # Endpoints
 #
-# NOTE: Endpoints have a protocol and port
+# NOTE: Endpoints have a protocol and port. Additionally, they are
+# only for usage within the Docker Compose network.
 ########################################################################
 DYNAMODB_ENDPOINT=http://${DYNAMODB_HOST}:${DYNAMODB_PORT}
 REDIS_ENDPOINT=http://${REDIS_HOST}:${REDIS_PORT}
-S3_ENDPOINT=http://${S3_HOST}:${S3_PORT}
-SQS_ENDPOINT=http://${SQS_HOST}:${SQS_PORT}
+S3_ENDPOINT=http://${S3_HOST}:${S3_PORT_INTERNAL}
+SQS_ENDPOINT=http://${SQS_HOST}:${SQS_PORT_INTERNAL}
+SECRETSMANAGER_ENDPOINT=http://${SECRETSMANAGER_HOST}:${SECRETSMANAGER_PORT}
 
 # Credentials
 ########################################################################
