--- a/local-grapl.env
+++ b/local-grapl.env
@@ -69,13 +69,11 @@ WAIT_PORT=1337
 ########################################################################
 AWS_REGION=us-east-1
 
+LOCALSTACK_HOST=aws.grapl.test
 DGRAPH_HOST=dgraph.grapl.test
-DYNAMODB_HOST=dynamodb.${AWS_REGION}.amazonaws.com
 GRAPL_API_HOST=api.grapl.test
 REDIS_HOST=redis.grapl.test
 S3_HOST=s3.${AWS_REGION}.amazonaws.com
-SECRETSMANAGER_HOST=secretsmanager.${AWS_REGION}.amazonaws.com
-SQS_HOST=sqs.${AWS_REGION}.amazonaws.com
 
 # Lambda "Hosts"
 ########################################################################
@@ -92,11 +90,16 @@ GRAPL_UX_ROUTER_HOST=ux-router.grapl.test
 # NOTE: Endpoints have a protocol and port. Additionally, they are
 # only for usage within the Docker Compose network.
 ########################################################################
-DYNAMODB_ENDPOINT=http://${DYNAMODB_HOST}:${DYNAMODB_PORT}
+
 REDIS_ENDPOINT=http://${REDIS_HOST}:${REDIS_PORT}
 S3_ENDPOINT=http://${S3_HOST}:${S3_PORT_INTERNAL}
-SQS_ENDPOINT=http://${SQS_HOST}:${SQS_PORT_INTERNAL}
-SECRETSMANAGER_ENDPOINT=http://${SECRETSMANAGER_HOST}:${SECRETSMANAGER_PORT}
+
+# The remaining endpoints are all just aliases for our unified
+# Localstack service
+LOCALSTACK_ENDPOINT=http://${LOCALSTACK_HOST}:${LOCALSTACK_PORT}
+DYNAMODB_ENDPOINT=${LOCALSTACK_ENDPOINT}
+SQS_ENDPOINT=${LOCALSTACK_ENDPOINT}
+SECRETSMANAGER_ENDPOINT=${LOCALSTACK_ENDPOINT}
 
 # Credentials
 ########################################################################
