First pass at a basic mutation service

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -18,4 +18,5 @@ members = [
     "./generators/sysmon-subgraph-generator",
     "./sqs-executor",
     "./grapl-service",
+    "./graph-mutation-service",
 ]
