--- a/src/rust/graph-descriptions/Cargo.toml
+++ b/src/rust/graph-descriptions/Cargo.toml
@@ -21,8 +21,7 @@ derive_builder = "0.9"
 dgraph-tonic = "0.8"
 
 log = "0.4"
-dgraph_query_lib = { git = "https://github.com/d0nutptr/dgraph_query_lib", branch = "main" }
-
+dgraph_query_lib = "0.1"
 futures-retry = "0.5"
 anyhow = "*"
 rand = "0.8"
