--- a/src/rust/graph-mutation-service/Cargo.toml
+++ b/src/rust/graph-mutation-service/Cargo.toml
@@ -4,7 +4,14 @@ version = "0.1.0"
 authors = ["colin <colin@graplsecurity.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[[bin]]
+name = "graph-mutation-service"
+
+
+[lib]
+name = "graph_mutation_service_lib"
+
 
 [dependencies]
 prost = "0.7"
@@ -34,6 +41,10 @@ serde_json = "1.0"
 lazy_static = "1.4"
 anyhow = "1.0.38"
 futures-retry = "0.6.0"
+dgraph_query_lib = "0.1.0"
 
 [build-dependencies]
 tonic-build = { version="0.4", features = ["prost"] }
+
+[features]
+integration = []
