[PR Feedback] Typecheck Pulumi code
This adds MyPy to Pants for typechecking Pulumi code. We're not
introducing MyPy more broadly at this time until
https://github.com/pantsbuild/pants/issues/11553 has been
addressed.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -46,6 +46,29 @@ jobs:
       - name: Python unit tests
         run: make test-unit-python
 
+  python-typecheck-pants:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.7]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Pants Cache
+        uses: actions/cache@v2
+        with:
+          # We'll set up a new cache when our lock-file changes
+          key: pants-${{ matrix.python-version }}-${{ hashFiles('3rdparty/python/constraints.txt') }}
+          path: |
+            ~/.cache/pants/setup
+            ~/.cache/pants/named_caches
+            ~/.cache/pants/lmdb_store
+      - name: Typecheck Python code with Pants
+        run: make test-typecheck-pants
+
   python-typecheck:
     runs-on: ubuntu-latest
 
