--- a/pants.toml
+++ b/pants.toml
@@ -5,6 +5,7 @@ backend_packages = [
   "pants.backend.python",
   "pants.backend.python.lint.isort",
   "pants.backend.python.lint.black",
+  "pants.backend.python.typecheck.mypy",
   "grapl_setup_py"
 ]
 
@@ -95,3 +96,7 @@ pytest_plugins = [
 # other ways to divide tests into classes (unit, integration, etc.) so
 # we can target things better with Pants tags.
 args = [ "--suppress-no-test-exit-code" ]
+
+[mypy]
+version = "mypy==0.800"
+config = "src/python/mypy.ini"
