[PR Feedback] Add SecretsManager helpers to env_helpers.py
This just helps to ensure that we're using consistent patterns
everywhere.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/3rdparty/python/requirements.txt
+++ b/3rdparty/python/requirements.txt
@@ -5,6 +5,7 @@ hypothesis
 mypy_boto3_dynamodb
 mypy_boto3_s3
 mypy_boto3_sagemaker
+mypy_boto3_secretsmanager
 mypy_boto3_sqs
 protobuf>=3.12.1
 pulumi>=2.0.0,<3.0.0
