--- a/src/python/python_test_deps/requirements.txt
+++ b/src/python/python_test_deps/requirements.txt
@@ -4,4 +4,4 @@ hypothesis==6.0.2
 
 mypy==0.790
 pytype==2021.1.14
-boto3-stubs[essential,sagemaker]==1.16.54.0
+boto3-stubs[essential,sagemaker,secretsmanager]==1.16.54.0
