--- a/test/docker-compose.integration-tests.yml
+++ b/test/docker-compose.integration-tests.yml
@@ -92,6 +92,8 @@ services:
       - IS_LOCAL=True
       - BUCKET_PREFIX
       - UX_BUCKET_URL="ux_bucket_url"
+      - GRAPL_AUTH_HOST
+      - GRAPL_AUTH_PORT
 
   cypress-integration-tests:
     image: grapl/grapl-cypress:${TAG:-latest}
