[PR Feedback] Add envvars back to some local scripts
This is admittedly gross, but absent larger changes, this seems like
the best way forward from a user-experience standpoint. In the near
term, we need to consolidate these local grapl scripts into something
more structured, like `graplctl`.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/local-grapl.env
+++ b/local-grapl.env
@@ -13,6 +13,10 @@ DGRAPH_ZERO_GRPC_PRIVATE_PORT=5080
 
 # Localstack's edge port; all Localstack services are proxied through
 # this port.
+#
+# NOTE: If you change this value, please edit the scripts in
+# etc/local_grapl/bin/ as well. This is only until we can deal with
+# those scripts in a better, more formalized way.
 LOCALSTACK_PORT=4566 # default value
 
 # DynamoDB Local port
@@ -34,6 +38,10 @@ REDIS_PORT=6379
 # While localstack does have an S3 implementation, we've noted some
 # test failures using it. Until we fully understand the nature of that
 # failure, we will continue using MinIO as our S3 substitute.
+#
+# NOTE: If you change this value, please edit the scripts in
+# etc/local_grapl/bin/ as well. This is only until we can deal with
+# those scripts in a better, more formalized way.
 S3_PORT_INTERNAL=9000 # default value
 S3_PORT_EXTERNAL=${S3_PORT_INTERNAL}
 
@@ -95,6 +103,14 @@ SECRETSMANAGER_ENDPOINT=${LOCALSTACK_ENDPOINT}
 
 # Credentials
 ########################################################################
+# NOTE: If you change these values, please edit
+# etc/local_grapl/bin/upload_analyzer_local.sh and
+# upload-sysmon-logs.py as well. This is only until we can deal with
+# those scripts in a better, more formalized way.
+#
+# NOTE: If you change these values, please edit the scripts in
+# etc/local_grapl/bin/ as well. This is only until we can deal with
+# those scripts in a better, more formalized way.
 FAKE_AWS_ACCESS_KEY_ID="THIS_IS_A_FAKE_AWS_ACCESS_KEY_ID"
 FAKE_AWS_SECRET_ACCESS_KEY="THIS_IS_A_FAKE_AWS_SECRET_ACCESS_KEY"
 
