--- a/src/rust/generators/generic-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/generic-subgraph-generator/Cargo.toml
@@ -16,16 +16,16 @@ lazy_static = "1.2.0"
 log = "0"
 prost = "0.7"
 regex = "1"
-rusoto_core = { version="0.45.0", default_features = false, features=["rustls"] }
-rusoto_s3 = { version="0.45.0", default_features = false, features=["rustls"] }
-rusoto_sqs = { version="0.45.0", default_features = false, features=["rustls"] }
+rusoto_core = { version="0.46.0", default_features = false, features=["rustls"] }
+rusoto_s3 = { version="0.46.0", default_features = false, features=["rustls"] }
+rusoto_sqs = { version="0.46.0", default_features = false, features=["rustls"] }
 futures = "0.3.*"
 aws_lambda_events = "0.2.0"
 simple_logger = "1.6.*"
 lambda_runtime = "0.2.*"
 async-trait = "0.1.22"
 zstd = "0.6"
-tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
+tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }
 
 tracing = "0.1.15"
 tracing-futures = "0.2.4"
