--- a/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
@@ -25,10 +25,10 @@ sysmon = "0.2"
 chrono = "0.4"
 stopwatch = "0"
 
-rusoto_s3 = {version="0.45.0", default_features = false, features=["rustls"]}
-rusoto_core = {version="0.45.0", default_features = false, features=["rustls"]}
-rusoto_sqs = {version="0.45.0", default_features = false, features=["rustls"]}
-rusoto_credential = "0.45.0"
+rusoto_s3 = {version="0.46.0", default_features = false, features=["rustls"]}
+rusoto_core = {version="0.46.0", default_features = false, features=["rustls"]}
+rusoto_sqs = {version="0.46.0", default_features = false, features=["rustls"]}
+rusoto_credential = "0.46.0"
 futures = "0.3.*"
 aws_lambda_events = "0.2.0"
 
@@ -39,7 +39,7 @@ thiserror = "1.0.22"
 lambda_runtime = "0.2"
 zstd = "0.6"
 tokio-compat = "0.1"
-tokio = { version = "0.2", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
+tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }
 graph-generator-lib = { path="../graph-generator-lib" }
 tracing = "0.1"
 tracing-subscriber = "0.2"
