--- a/src/rust/graph-descriptions/Cargo.toml
+++ b/src/rust/graph-descriptions/Cargo.toml
@@ -8,13 +8,13 @@ license = "MIT"
 
 [dependencies]
 derive_builder = "0.9"
-dgraph-tonic = "0.8"
+dgraph-tonic = "0.9"
 
 dgraph_query_lib = "0.1"
 anyhow = "*"
 
 futures = "0.3"
-futures-retry = "0.5"
+futures-retry = "0.6"
 grapl-utils = { path = "../grapl-utils" }
 log = "0.4"
 prost = "0.7"
@@ -26,7 +26,7 @@ serde_derive = "1"
 serde_json = "1"
 thiserror = "1"
 tracing = "0.1.22"
-tokio = { version = "0.2.*", features = ["macros"] }
+tokio = { version = "1", features = ["macros"] }
 tracing-subscriber = "*"
 hex = "0.4.2"
 arbitrary = { version="1" }
