--- a/src/rust/graph-merger/Cargo.toml
+++ b/src/rust/graph-merger/Cargo.toml
@@ -24,15 +24,15 @@ serde_json = "1.0.53"
 serde_derive = "1.0.110"
 log = "0.4.*"
 
-dgraph-tonic = { version = "0.8", features = ["dgraph-1-1"] }
+dgraph-tonic = { version = "0.9", features = ["dgraph-1-1"] }
 grpc = "0.6.1"
 sqs-executor = { path = "../sqs-executor/" }
 
-rusoto_s3 = { version="0.45.0", default_features = false, features=["rustls"] }
-rusoto_core = { version="0.45.0", default_features = false, features=["rustls"] }
-rusoto_sqs = { version="0.45.0", default_features = false, features=["rustls"] }
-rusoto_dynamodb = { version="0.45", default_features = false, features=["rustls"] }
-rusoto_credential = "0.45"
+rusoto_s3 = { version="0.46.0", default_features = false, features=["rustls"] }
+rusoto_core = { version="0.46.0", default_features = false, features=["rustls"] }
+rusoto_sqs = { version="0.46.0", default_features = false, features=["rustls"] }
+rusoto_dynamodb = { version="0.46", default_features = false, features=["rustls"] }
+rusoto_credential = "0.46"
 
 aws_lambda_events = "0.2.0"
 
@@ -49,9 +49,9 @@ futures = "0.3"
 async-trait = "0.1"
 uuid = "0"
 tokio-compat = "0"
-tokio = { version = "0.2", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
+tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }
 chrono = "0.4"
-serde_dynamodb = { version="0.6", default_features = false, features=["rustls"] }
+serde_dynamodb = { version="0.7", default_features = false, features=["rustls"] }
 tracing = "0.1.22"
 thiserror = "1.0.23"
 lambda_runtime = "0.2.1"
