--- a/src/rust/grapl-config/Cargo.toml
+++ b/src/rust/grapl-config/Cargo.toml
@@ -12,17 +12,17 @@ log = "0.4.*"
 sqs-executor = { path = "../sqs-executor/" }
 grapl-observe = { path = "../grapl-observe/" }
 
-rusoto_s3 = { version="0.45.0", default_features = false, features=["rustls"] }
-rusoto_core = { version="0.45.0", default_features = false, features=["rustls"] }
-rusoto_sqs = { version="0.45.0", default_features = false, features=["rustls"] }
-rusoto_dynamodb = { version="0.45.0", default_features = false, features=["rustls"] }
-rusoto_cloudwatch = { version="0.45.0", default_features = false, features=["rustls"] }
-rusoto_credential = { version="0.45.0", default_features = false }
+rusoto_s3 = { version="0.46.0", default_features = false, features=["rustls"] }
+rusoto_core = { version="0.46.0", default_features = false, features=["rustls"] }
+rusoto_sqs = { version="0.46.0", default_features = false, features=["rustls"] }
+rusoto_dynamodb = { version="0.46.0", default_features = false, features=["rustls"] }
+rusoto_cloudwatch = { version="0.46.0", default_features = false, features=["rustls"] }
+rusoto_credential = { version="0.46.0", default_features = false }
 
 tracing = "0.1.15"
 tracing-subscriber = "0.2"
 tracing-futures = "0.2.4"
-tokio = { version = "0.2.4", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
+tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }
 color-eyre = "0.3.4"
 eyre = "0.4.3"
 async-trait = "0.1.42"
