--- a/src/rust/metric-forwarder/Cargo.toml
+++ b/src/rust/metric-forwarder/Cargo.toml
@@ -18,13 +18,13 @@ lambda_runtime = "0.2"
 log = "0.4"
 ordered-float = "2"
 rayon = "1.5"
-rusoto_cloudwatch = { version="0.45", default_features = false, features=["rustls"] }
-rusoto_core = { version="0.45", default_features = false, features=["rustls"] }
+rusoto_cloudwatch = { version="0.46", default_features = false, features=["rustls"] }
+rusoto_core = { version="0.46", default_features = false, features=["rustls"] }
 serde_json = "1"
 statsd-parser = "0.3"
 thiserror = "1"
 tokio-compat = "0.1"
-tokio = { version = "0.2", features = ["sync", "macros", "time", "rt-threaded"] }
+tokio = { version = "1", features = ["sync", "macros", "time", "rt-multi-thread"] }
 
 [dependencies.uuid]
 version = "*"
