--- a/src/rust/sqs-executor/Cargo.toml
+++ b/src/rust/sqs-executor/Cargo.toml
@@ -10,11 +10,11 @@ edition = "2018"
 grapl-observe = { path = "../grapl-observe" }
 grapl-utils = { path = "../grapl-utils" }
 
-rusoto_core = {version = "0.45", default_features = false, features=["rustls"]}
-rusoto_s3 = {version = "0.45", default_features = false, features=["rustls"]}
-rusoto_sqs = {version = "0.45", default_features = false, features=["rustls"]}
+rusoto_core = {version = "0.46", default_features = false, features=["rustls"]}
+rusoto_s3 = {version = "0.46", default_features = false, features=["rustls"]}
+rusoto_sqs = {version = "0.46", default_features = false, features=["rustls"]}
 
-tokio = { version = "0.2", features = ["io-util", "sync", "rt-core", "macros", "time", "rt-threaded"] }
+tokio = { version = "1", features = ["io-util", "sync", "rt", "macros", "time", "rt-multi-thread"] }
 
 serde = "1.0"
 serde_json = "1.0"
@@ -30,7 +30,7 @@ futures-util = "0.3.8"
 uuid = {version = "0.8.1", features=["v4"]}
 lazy_static = "1.4"
 futures = "0.3.8"
-darkredis = "0.7.0"
+darkredis = "0.8.0"
 num_cpus = "1.13.0"
 hex = "0.4.2"
 tap = "1.0.0"
