--- a/src/rust/graph-descriptions/Cargo.toml
+++ b/src/rust/graph-descriptions/Cargo.toml
@@ -8,14 +8,7 @@ license = "MIT"
 
 [dependencies]
 derive_builder = "0.9"
-dgraph-tonic = "0.9"
 
-dgraph_query_lib = "0.1"
-anyhow = "*"
-
-futures = "0.3"
-futures-retry = "0.6"
-grapl-utils = { path = "../grapl-utils" }
 log = "0.4"
 prost = "0.7"
 prost-derive = "0.7"
@@ -23,12 +16,7 @@ prost-types = "0.7"
 rand = "0.8"
 serde = "1"
 serde_derive = "1"
-serde_json = "1"
-thiserror = "1"
 tracing = "0.1.22"
-tokio = { version = "1", features = ["macros"] }
-tracing-subscriber = "*"
-hex = "0.4.2"
 arbitrary = { version="1" }
 
 [dependencies.uuid]
@@ -42,6 +30,7 @@ prost-build = "0.7"
 test-env-log = "0.2.5"
 quickcheck = "1.0.3"
 quickcheck_macros = { version="1" }
+tracing-subscriber = "0.2"
 
 [features]
 default = []
