--- a/src/rust/metric-forwarder/Cargo.toml
+++ b/src/rust/metric-forwarder/Cargo.toml
@@ -11,8 +11,6 @@ aws_lambda_events = "0.4"
 base64 = "0.13"
 chrono = "0.4"
 flate2 = "1"
-hmap = "0.1"
-itertools = "0"
 futures = "0.3"
 lambda_runtime = "0.2"
 log = "0.4"
@@ -29,3 +27,7 @@ tokio = { version = "1", features = ["sync", "macros", "time", "rt-multi-thread"
 [dependencies.uuid]
 version = "*"
 features = ["v4"]
+
+[dev-dependencies]
+hmap = "0.1"
+itertools = "0.10"
