--- a/src/rust/metric-forwarder/Cargo.toml
+++ b/src/rust/metric-forwarder/Cargo.toml
@@ -23,6 +23,7 @@ statsd-parser = "0.3"
 thiserror = "1"
 tokio-compat = "0.1"
 tokio = { version = "1", features = ["sync", "macros", "time", "rt-multi-thread"] }
+tokio-compat-02 = "0.2.0"
 
 [dependencies.uuid]
 version = "*"
